--- a/03/3.1/index.html
+++ b/03/3.1/index.html
@@ -4,15 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <title>Parallax</title>
+    <title>Enemy Pattern</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-        <canvas id="canvas1"></canvas>
-        <p>Game Speed <span id="showGameSpeed"></span></p>
-        <input type="range" min="0" max="20" value="5" class="slider" id="slider">
-    </div>
+    <canvas id="canvas1"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
